[package]
name = "rustetta-stone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28"
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
time = { version = "0.3", features = ["macros"] }
log = "0.4"
env_logger = "0.11"